--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bootstrap</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="public/css/style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 
@@ -17,7 +17,7 @@
       </div>
       <div class="col-4 text-center">
         <a href="index.html">
-          <img id="logo" class="col-md-6" src="senac.png"> <!-- Logo Senac -->
+          <img id="logo" class="col-md-6" src="public/images/senac.png"> <!-- Logo Senac -->
         </a>
       </div>
       <div class="col-4 d-flex justify-content-end align-items-center">  <!-- Lupa -->
