--- a/courses.html
+++ b/courses.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bootstrap</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="public/css/style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
@@ -19,7 +19,7 @@
       </div>
       <div class="col-4 text-center">
         <a href="index.html">
-          <img id="logo" class="col-md-6" src="senac.png"> <!-- Logo Senac -->
+          <img id="logo" class="col-md-6" src="public/images/senac.png"> <!-- Logo Senac -->
         </a>
       </div>
       <div class="col-4 d-flex justify-content-end align-items-center">
@@ -65,7 +65,7 @@
     <div class="row">
       <div class="col-md-4">
         <div class="card mb-4 box-shadow">
-          <img class="card-img-top" src="imagem.jpg" alt="Imagem curso">
+          <img class="card-img-top" src="public/images/imagem.jpg" alt="Imagem curso">
           <div class="card-body">
             <h5 class="card-title">Curso 1</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -80,7 +80,7 @@
       </div>
       <div class="col-md-4">
         <div class="card mb-4 box-shadow">
-          <img class="card-img-top" src="imagem.jpg" alt="Imagem curso">
+          <img class="card-img-top" src="public/images/imagem.jpg" alt="Imagem curso">
           <div class="card-body">
             <h5 class="card-title">Curso 2</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -95,7 +95,7 @@
       </div>
       <div class="col-md-4">
         <div class="card mb-4 box-shadow">
-          <img class="card-img-top" src="imagem.jpg" alt="Imagem curso">
+          <img class="card-img-top" src="public/images/imagem.jpg" alt="Imagem curso">
           <div class="card-body">
             <h5 class="card-title">Curso 3</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -113,7 +113,7 @@
     <div class="row">
       <div class="col-md-4">
         <div class="card mb-4 box-shadow">
-          <img class="card-img-top" src="imagem.jpg" alt="Imagem curso">
+          <img class="card-img-top" src="public/images/imagem.jpg" alt="Imagem curso">
           <div class="card-body">
             <h5 class="card-title">Curso 4</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -128,7 +128,7 @@
       </div>
       <div class="col-md-4">
         <div class="card mb-4 box-shadow">
-          <img class="card-img-top" src="imagem.jpg" alt="Imagem curso">
+          <img class="card-img-top" src="public/images/imagem.jpg" alt="Imagem curso">
           <div class="card-body">
             <h5 class="card-title">Curso 5</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -143,7 +143,7 @@
       </div>
       <div class="col-md-4">
         <div class="card mb-2 box-shadow">
-          <img class="card-img-top" src="imagem.jpg" alt="Imagem curso">
+          <img class="card-img-top" src="public/images/imagem.jpg" alt="Imagem curso">
           <div class="card-body">
             <h5 class="card-title">Curso 6</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
