--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bootstrap</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="public/css/style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 
 <body>
-  <header class="container">
-    <div class="row flex-nowrap justify-content-between align-items-center"> <!-- Data -->
+<div class="container">
+  <header class="pb-3">
+    <div class="row flex-nowrap justify-content-between align-items-center pt-3 pb-3"> <!-- Data -->
       <div class="col-4 pt-1">
         <a href="#" class="text-muted" id="data">25/03/2020</a> 
       </div>
       <div class="col-4 text-center">
         <a href="index.html">
-          <img id="logo" class="col-md-6" src="senac.png"> <!-- Logo Senac -->
+          <img id="logo" class="col-md-6" src="public/images/senac.png"> <!-- Logo Senac -->
         </a>
       </div>
       <div class="col-4 d-flex justify-content-end align-items-center">  <!-- Lupa -->
@@ -44,17 +45,16 @@
           <a class="p-2 text-muted" href="contact.html">Fale Conosco</a>
         </nav>
       </div>
+    </div>
   </header>
-  <div class="container">
     <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark" id="jumbotron">     <!-- Caixa texto -->
-      <div class="col-md-12 px-0">
+      <div class="col-md-8 px-0">
         <h1 class="display-5" id="titlejumbo">História do SENAC São Miguel</h1>
-        <p class="col-md-7">Desde 1946, o Serviço Nacional de Aprendizagem Comercial - Senac é o principal agente de educação profissional voltado para o Comércio de Bens, Serviços e Turismo do País.</p>
+        <p>Desde 1946, o Serviço Nacional de Aprendizagem Comercial - Senac é o principal agente de educação profissional voltado para o Comércio de Bens, Serviços e Turismo do País.</p>
         <p class="lead mb-0"><a href="about.html" class="text-white font-weight-bold">Continue lendo...</a></p>
       </div>
     </div>
-  </div>
-  <div class="container">
+
     <div class="table-responsive">     <!-- Tabela -->
       <h2 class="display-5" id="title-table">Úiltimas publicações</h2>
         <table class="table">
@@ -96,7 +96,8 @@
     </div>
   </div>
 
-  <footer class="blog-footer">  <!-- Rodapé -->
+  <!-- usamos apenas algumas classes prontas do boostrap-->
+  <footer class="bg-light text-center p-4">  <!-- Rodapé -->
     <p>Criado com <a href="https://getbootstrap.com/">Bootstrap</a></p>
     <p>SENAC - São Miguel do Oeste</p>
   </footer>
