--- a/about.html
+++ b/about.html
@@ -6,58 +6,68 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bootstrap</title>
   <link rel="stylesheet" href="public/css/style.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 
 <body>
-  <header class="container">
-    <div class="row flex-nowrap justify-content-between align-items-center"> <!-- Data -->
-      <div class="col-4 pt-1">
-        <a href="#" class="text-muted" id="data">25/03/2020</a> 
+  <div class="container">
+    <header class="pb-3">
+      <div class="row flex-nowrap justify-content-between align-items-center pt-3 pb-3">
+        <!-- Data -->
+        <div class="col-4 pt-1">
+          <a href="#" class="text-muted" id="data">25/03/2020</a>
+        </div>
+        <div class="col-4 text-center">
+          <a href="index.html">
+            <img id="logo" class="col-md-6" src="public/images/senac.png"> <!-- Logo Senac -->
+          </a>
+        </div>
+        <div class="col-4 d-flex justify-content-end align-items-center">
+          <!-- Lupa -->
+          <a class="text-muted" href="ead.html" aria-label="Pesquisar">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
+              stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img"
+              viewBox="0 0 24 24" focusable="false">
+              <title>Pesquisar</title>
+              <circle cx="10.5" cy="10.5" r="7.5" />
+              <path d="M21 21l-5.2-5.2" />
+            </svg>
+          </a>
+          <a class="btn btn-sm btn-outline-secondary" href="ead.html" id="portal">Portal do Aluno</a>
+          <!-- Botão portal -->
+        </div>
       </div>
-      <div class="col-4 text-center">
-        <a href="index.html">
-          <img id="logo" class="col-md-6" src="public/images/senac.png"> <!-- Logo Senac -->
-        </a>
+      <div id="menu">
+        <!-- Menu de navegação -->
+        <hr class="my-1"> <!-- Linha -->
+        <div class="nav-scroller">
+          <nav class="nav d-flex justify-content-between">
+            <a class="p-2 text-muted" href="unid.html">Unidades</a>
+            <a class="p-2 text-muted" href="courses.html">Cursos</a>
+            <a class="p-2 text-muted font-weight-bold" href="about.html">Sobre</a>
+            <a class="p-2 text-muted" href="ead.html">EAD</a>
+            <a class="p-2 text-muted" href="contact.html">Fale Conosco</a>
+          </nav>
+        </div>
+        <div class="navigation">
+          <!-- Barra de navegação -->
+          <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a href="index.html">Página Inicial</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Sobre</li>
+            </ol>
+          </nav>
+        </div>
       </div>
-      <div class="col-4 d-flex justify-content-end align-items-center">  <!-- Lupa -->
-        <a class="text-muted" href="ead.html" aria-label="Pesquisar">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
-            stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24"
-            focusable="false">
-            <title>Pesquisar</title>
-            <circle cx="10.5" cy="10.5" r="7.5" />
-            <path d="M21 21l-5.2-5.2" />
-          </svg>
-        </a>
-        <a class="btn btn-sm btn-outline-secondary" href="ead.html" id="portal">Portal do Aluno</a>   <!-- Botão portal -->
-      </div>
-    </div>
-    <div id="menu">  <!-- Menu de navegação -->
-      <hr class="my-1"> <!-- Linha -->
-      <div class="nav-scroller">
-        <nav class="nav d-flex justify-content-between">
-          <a class="p-2 text-muted" href="unid.html">Unidades</a>
-          <a class="p-2 text-muted" href="courses.html">Cursos</a>
-          <a class="p-2 text-muted font-weight-bold" href="about.html">Sobre</a>
-          <a class="p-2 text-muted" href="ead.html">EAD</a>
-          <a class="p-2 text-muted" href="contact.html">Fale Conosco</a>
-        </nav>
-      </div>
-      <div class="navigation">
-        <!-- Barra de navegação -->
-        <nav aria-label="breadcrumb">
-          <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="index.html">Página Inicial</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Sobre</li>
-          </ol>
-        </nav>
-      </div>
-  </header>
-  
-  <footer class="blog-footer">  <!-- Rodapé -->
+    </header>
+  </div>
+
+  <footer class="bg-light text-center p-4">
+    <!-- Rodapé -->
     <p>Criado com <a href="https://getbootstrap.com/">Bootstrap</a></p>
     <p>SENAC - São Miguel do Oeste</p>
   </footer>
 </body>
+
 </html>
